force-app/main/default/objects/FreshdeskSettings__c/FreshdeskSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store settings about Freshdesk API</description>
    <label>Freshdesk Settings</label>
</CustomObject>