force-app/main/default/objects/FreshdeskSettings__c/fields/ContactEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ContactEndpoint__c</fullName>
    <label>ContactEndpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>