force-app/main/default/objects/FreshdeskSettings__c/fields/GetTicketsByRequesterEmailEndpoint__c.field-meta.xml
<CustomField>
    <fullName>GetTicketsByRequesterEmailEndpoint__c</fullName>
    <label>Get Tickets By Requester Email Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>