force-app/main/default/objects/FreshdeskSettings__c/fields/TicketEndpoint__c.field-meta.xml
<CustomField>
    <fullName>TicketEndpoint__c</fullName>
    <label>TicketEndpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>